Fixed extra bottom white space

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -6,7 +6,22 @@ button {
 
 #enlarged-post{
     margin-top: 10%;
+}
 
+
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background-color: #dfacb9;
+   overflow-y: auto; /* Ensure proper scrolling */
+
+
+}
+
+div .container {
+  margin-bottom: 0px;
 }
 
 .vsc-initialized {
@@ -681,7 +696,11 @@ button {
       margin: 0;
       padding: 0;
       height: 100vh;
+      background-color: #dfacb9;
+
     }
+
+    
 
     body {
       overflow-x: hidden;
